--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bunyan": "latest",
     "connect": "latest",
+    "crypto": "latest",
     "ejs": "latest",
     "express": "latest",
     "grunt-cli": "latest",
@@ -21,6 +22,7 @@
     "lib-summon": "",
     "path": "latest",
     "request": "latest",
+    "require-dir": "latest",
     "shelljs": "latest",
     "underscore": "latest",
     "xml2js": "latest"
