Added advanced search for Aquabrowser

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lib-aquabrowser": "",
     "lib-summon": "",
     "path": "latest",
+    "querystring": "latest",
     "request": "latest",
     "require-dir": "latest",
     "shelljs": "latest",
